# one-deploy-validation

./: .ansible-lint.yml  .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
inventory/: example.yml  local-test.yaml
inventory/group_vars/: all.yml
inventory/local_test/: local-test.yaml
inventory/local_test/group_vars/: all.yml
inventory/reference/: local-ha.yml
inventory/reference/group_vars/: all.yml
playbooks/: ceph.yml  cleanup-test-vm-template.yml  conn-matrix.yml  fe-ha.yml  infra.yml  main.yml  pre.yml  prepare-test-vm-template.yml  site.yml  validation.yml  verification.yml  vm-ha.yml
playbooks/tasks/: cleanup_conn_matrix_per_host.yml  conn_matrix_create_vms.yml  conn_matrix_per_host.yml  vm_ha_produce_error_if_down.yml
playbooks/templates/: appendix-cloud-report.j2  connectivity-matrix.j2  vm-group.tmpl.j2  vm.tmpl.j2
playbooks/vars/: conn_matrix_defaults.yml  test_vm_template_defaults.yml
roles/example/tasks/: main.yml
roles/fe_ha/defaults/: main.yml
roles/fe_ha/tasks/: main.yml
roles/fe_ha/templates/: report_template.j2
roles/network-benchmark/defaults/: main.yml
roles/network-benchmark/tasks/: main.yml  network_benchmark.yml
roles/oneflow_validation/tasks/: main.yml
roles/test_vm/defaults/: main.yml
verification-tool/: README.md  oneverify
verification-tool/config/: checklist.yaml  config.yaml
verification-tool/old_verification/: README.md
verification-tool/utils/: command.rb  misc.rb
verification-tool/verifiers/: host.rb  img_datastore.rb  oned.rb  sunstone.rb  sys_datastore.rb  vnet.rb
(+21 files in other folders)
