[project]
name = "one-deploy-validation"
version = "0.0.0"
description = "OpenNebula Engineering Ansible Playbooks for Deployment Validation"
authors = ["OpenNebula <contact@opennebula.io>"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"

[tool.hatch.envs.validation-default]
skip-install = true
installer = "uv"
dependencies = [
  "ansible-core>=2.18,<2.19",
  "jmespath",
  "netaddr"
]
